Fixed based on review